# orbit

./: .gitignore  .orbit.toml  Cargo.toml  README.md  install.sh  test_cmd.sh
src/: main.rs
src/actions/: mod.rs
src/config/: mod.rs
src/core/: app.rs  events.rs  mod.rs  state.rs
src/detection/: mod.rs
src/detection/analyzers/: docker.rs  env.rs  generic.rs  git.rs  go.rs  mod.rs  node.rs  python.rs  rust.rs
src/focus/: mod.rs
src/integrations/: mod.rs  system.rs
src/integrations/docker/: mod.rs
src/integrations/ports/: mod.rs
src/secrets/: mod.rs
src/ui/: mod.rs  renderer.rs
src/ui/layout/: mod.rs
src/ui/theme/: mod.rs
src/ui/widgets/: action_palette.rs  actions_panel.rs  container_panel.rs  env_panel.rs  footer.rs  header.rs  help_overlay.rs  metrics_panel.rs  mod.rs  output_panel.rs  ports_panel.rs
