[package]
name = "orbit"
version = "0.1.0"
edition = "2021"
authors = ["Orbit Contributors"]
description = "The Spatial Dashboard for your Terminal Workflow"
license = "MIT"
repository = "https://github.com/orbit-tui/orbit"
keywords = ["tui", "terminal", "dashboard", "developer-tools", "macos"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
# TUI Framework
ratatui = { version = "0.28", features = ["all-widgets"] }
crossterm = { version = "0.28", features = ["event-stream"] }

# Async Runtime
tokio = { version = "1.40", features = ["full", "process", "sync", "time", "fs", "io-util", "macros", "rt-multi-thread"] }
tokio-stream = "0.1"
futures = "0.3"
async-trait = "0.1"

# Serialization & Config
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"

# CLI & Logging
clap = { version = "4.5", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# Error Handling
anyhow = "1.0"
thiserror = "1.0"

# System & Process
sysinfo = "0.31"
nix = { version = "0.29", features = ["net", "process", "signal"] }
portable-pty = "0.8"

# macOS Specific
security-framework = "2.11"
core-foundation = "0.9"

# Docker
bollard = "0.17"

# Networking
reqwest = { version = "0.12", features = ["json"] }

# File Watching
notify = "6.1"
notify-debouncer-mini = "0.4"

# Utils
dirs = "5.0"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10"
glob = "0.3"
once_cell = "1.19"
parking_lot = "0.12"
uuid = { version = "1.10", features = ["v4"] }
indexmap = { version = "2.5", features = ["serde"] }
humansize = "2.1"
unicode-width = "0.1"
textwrap = "0.16"

# Colors & Styling
palette = "0.7"

[dev-dependencies]
pretty_assertions = "1.4"
tempfile = "3.12"
mockall = "0.13"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[[bin]]
name = "orbit"
path = "src/main.rs"
